# avito-2025-pr_reviews

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
app/: main.py
app/api/: pr.py  review.py  stats.py  team.py  user.py
app/core/: config.py
app/db/: session.py
app/models/: models.py
app/repositories/: pr_repository.py  reviewer_repository.py  team_repository.py  user_repository.py
app/schemas/: schemas.py
app/services/: pr_service.py  pr_service_errors.py  team_service.py  user_service.py
migrations/: env.py
migrations/versions/: 240cc67a558b_init.py
tests/: conftest.py  test_api_errors.py  test_api_pr.py  test_api_pr_merge_reassign.py  test_api_review.py  test_api_team.py  test_api_user.py  test_service_pr.py
tests/integration/: test_api_health.py  test_api_pr.py  test_api_stats.py  test_api_team.py  test_api_user.py  test_scenarios.py
tests/unit/: __init__.py  test_pr_service.py  test_repositories.py  test_team_user_service.py
